--- a/style.css
+++ b/style.css
@@ -11,12 +11,13 @@
 .bigbox {
 	width: 250px;
 	height: 250px;
-	background-color: lightgray;
+	background-color: #3882F6;
 }
 
 body {
-	max-width: 1100px;
 	background-color: black;
+	display: flex;
+	flex-direction: column;
 }
 
 .navbar, .container, .title {
@@ -33,8 +34,7 @@ body {
 }
 
 .container {
-	height: 400px;
-	ustify-content: center;
+	justify-content: space-between;
 	align-items: center;
 }
 
@@ -68,22 +68,36 @@ button {
 }
 
 .cardscontainer {
-
 	display: flex;
-	color: red;
 	background-color: white;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: safe center;
 	align-items: center;
-	height: 400px;
+	gap: 10px;
+}
+
+.titlecards {
+	font-weight: extra-bold;
+	font-size: 36px;
+}
+
+.titlecards, .cards div{
+	color: black;
 }
 
 .cards {
-	display: inline-flex;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 	align-content: center;
 	text-align: center;
+	flex-wrap: wrap;
+	gap:  20px;
+}
+
+.card div{
+	height: 100px;
+	width: 100px;
 }
 
 .box {
@@ -93,6 +107,4 @@ button {
 	background-color: white;
 	border-radius: 7px;
 	display: flex;
-	justify-content: center;
-	align-content: center;
 }
